--- a/sims/src/main/resources/templates/customers.html
+++ b/sims/src/main/resources/templates/customers.html
@@ -21,35 +21,30 @@
 
 	<div class="content">
 		<div class="container my-3">
-    		<div class="row">
-        		<div class="col-md-8 mx-auto">
-					<h2 class="page-heading">CUSTOMERS</h2>
-					<div class="my-3">
-					<table class="table table-dark table-striped">
-  						<thead>
-    						<tr>
-      							<th scope="col">First Name</th>
-      							<th scope="col">Last Name</th>
-      							<th scope="col">Email</th>
-      							<th scope="col"></th>
-    						</tr>
-  						</thead>
-  						<tbody>
-    						<tr th:each="cust : ${custList}">
-      							<td th:text="${cust.firstName}"></td>
-      							<td th:text="${cust.lastName}"></td>
-      							<td th:text="${cust.email}"></td>
-      							<td>
-      								<button th:onclick="|window.location.href='/customers/edit/${cust.id}'|" th:field=${cust.id}>Update</button>
-      								<button th:onclick="|window.location.href='/customers/${cust.id}'|" th:field=${cust.id}>Delete</button>
-      							</td>
-    						</tr>
-  						</tbody>
-					</table>
-					</div>
-					<button th:onclick="|window.location.href='/customers/create'|">Create New Customer</button>
-        		</div>
-    		</div>
+			<h2>CUSTOMERS</h2>
+			<table class="table table-dark table-striped">
+  				<thead>
+    				<tr>
+      					<th scope="col">First Name</th>
+      					<th scope="col">Last Name</th>
+      					<th scope="col">Email</th>
+      					<th scope="col"></th>
+    				</tr>
+  				</thead>
+  				<tbody>
+    				<tr th:each="cust : ${custList}">
+      					<td th:text="${cust.firstName}"></td>
+      					<td th:text="${cust.lastName}"></td>
+      					<td th:text="${cust.email}"></td>
+      					<td>
+      						<button th:onclick="|window.location.href='/customers/edit/${cust.id}'|" th:field=${cust.id}>Edit</button>
+      						<button th:onclick="|window.location.href='/customers/${cust.id}'|" th:field=${cust.id}>Delete</button>
+      					</td>
+    				</tr>
+  				</tbody>
+			</table>
+				
+			<button th:onclick="|window.location.href='/customers/create'|">Create New Customer</button>
 		</div>
 	</div>
 	
