--- a/sims/src/main/resources/templates/newSaleForm.html
+++ b/sims/src/main/resources/templates/newSaleForm.html
@@ -18,51 +18,45 @@
 
 	<div class="content">
 		<div class="container my-3">
-    		<div class="row">
-        		<div class="col-md-8 mx-auto">
-            		<h2>Create Sale</h2>
-            		<form th:action="@{/sales}" th:object="${sale}" method="POST">
-                		<div class="form-row">
-                    		<div class="col-md-6 form-group">
-                        		<label>Date of Sale</label>
-                        		<input type="date" class="form-control" th:field="${sale.dateOfSale}">
-                    		</div>
-                    		<div class="col-md-6 form-group">
-                        		<label>Customer</label>
-                        		<select th:field="${sale.customer}">
-  									<option th:each="cust : ${custList}" th:value="${{cust}}" th:text="${cust.firstName} + ' ' + ${cust.lastName}"></option>
-								</select>
-                    		</div>
-                    		<div class="col-md-6 form-group">
-                        		<label>Item</label>
-                        		<select th:field="${sale.item}">
-  									<option th:each="item : ${itemList}" th:value="${{item}}" th:text="${item.name}"></option>
-								</select>
-                    		</div>
-                    		<div class="col-md-6 form-group">
-                        		<label>Quantity</label>
-                        		<input type="number" step="any" class="form-control" th:field="${sale.quantity}">
-                    		</div>
-                    		<div class="col-md-6 form-group">
-                        		<label>Sale Price Per Item</label>
-                        		<input type="number" step="any" class="form-control" th:field="${sale.salePrice}">
-                    		</div>
-                    		<div class="col-md-6 form-group">
-                        		<label>Sale Status</label>
-                        		<div class="form-check form-check-inline">
-                            		<input class="form-check-input" type="radio" th:field="${sale.paid}" id="option1" value="1">
-                            		<label class="form-check-label" for="option1">Paid</label>
-                        		</div>
-                        		<div class="form-check form-check-inline">
-                            		<input class="form-check-input" type="radio" th:field="${sale.paid}" id="option2" value="0">
-                            		<label class="form-check-label" for="option2">Unpaid</label>
-                        		</div>
-                    		</div>
-                    	</div>
-                		<button type="submit" class="btn btn-primary btn-block mt-3">Create Sale</button>
-            		</form>
-       	 		</div>
-    		</div>
+            <h2>Create Sale</h2>
+           	<form th:action="@{/sales}" th:object="${sale}" method="POST"> 		
+            	<div class="col-md-6 form-group">
+                	<label>Date of Sale</label>
+                    <input type="date" class="form-control" th:field="${sale.dateOfSale}">
+                </div>
+                <div class="col-md-6 form-group">
+                    <label>Customer</label>
+                   	<select class="form-select" th:field="${sale.customer}">
+  						<option th:each="cust : ${custList}" th:value="${{cust}}" th:text="${cust.firstName} + ' ' + ${cust.lastName}"></option>
+					</select>
+                </div>
+                <div class="col-md-6 form-group">
+                    <label>Item</label>
+                    <select class="form-select" th:field="${sale.item}">
+  						<option th:each="item : ${itemList}" th:value="${{item}}" th:text="${item.name}"></option>
+					</select>
+                </div>
+                <div class="col-md-6 form-group">
+                    <label>Quantity</label>
+                    <input type="number" step="any" class="form-control" th:field="${sale.quantity}">
+                </div>
+                <div class="col-md-6 form-group">
+                    <label>Sale Price Per Item</label>
+                    <input type="number" step="any" class="form-control" th:field="${sale.salePrice}">
+                </div>
+                <div class="col-md-6 form-group">
+                     <label>Sale Status</label>
+                     <div class="form-check form-check-inline">
+                     	<input class="form-check-input" type="radio" th:field="${sale.paid}" id="option1" value="1">
+                        <label class="form-check-label" for="option1">Paid</label>
+                     </div>
+                     <div class="form-check form-check-inline">
+                         <input class="form-check-input" type="radio" th:field="${sale.paid}" id="option2" value="0">
+                         <label class="form-check-label" for="option2">Unpaid</label>
+                     </div>
+                </div>
+               	<button type="submit" class="btn btn-primary btn-block mt-3">Create Sale</button>
+        	</form>
 		</div>
 	</div>
 
