--- a/sims/src/main/resources/templates/sales.html
+++ b/sims/src/main/resources/templates/sales.html
@@ -20,45 +20,41 @@
 	</div>
 
 	<div class="content">
-		<div class="container-fluid">
-    		<div class="row">
-        		<div class="col-md-8 mx-auto">
-					<h2 class="page-heading">SALES</h2>
-					<div class="my-3">
-					<table class="table table-dark table-striped">
-  						<thead>
-    						<tr>
-      							<th scope="col">Date of Sale</th>
-      							<th scope="col">Customer</th>
-      							<th scope="col">Item</th>
-      							<th scope="col">Quantity</th>
-      							<th scope="col">Sale Price</th>
-      							<th scope="col">Total</th>
-      							<th scope="col">Status</th>
-      							<th scope="col"></th>
-    						</tr>
-  						</thead>
-  						<tbody>
-    						<tr th:each="sale : ${saleList}">
-      							<td th:text="${sale.dateOfSale}"></td>
-      							<td th:text="${sale.customer.firstName} + ' ' + ${sale.customer.lastName}"></td>
-      							<td th:text="${sale.item.name}"></td>
-      							<td th:text="${sale.quantity}"></td>
-      							<td th:text="${sale.salePrice}"></td>
-      							<td th:text="${sale.salePrice} * ${sale.quantity}"></td>
-      							<td th:text="${sale.paid} ? 'PAID' : 'UNPAID'"></td>
-      							<td>
-      								<button th:onclick="|window.location.href='/sales/edit/${sale.id}'|" th:field=${sale.id}>Edit</button>
-      								<button th:onclick="|window.location.href='/sales/delete/${sale.id}'|" th:field=${sale.id}>Delete</button>
-      							</td>
-    						</tr>
-  						</tbody>
-					</table>
-					</div>
-					<button th:onclick="|window.location.href='/sales/create'|">Create Sale Item</button>
-        		</div>
-    		</div>
+		<div class="container my-3">
+			<h2>SALES</h2>
+			<table class="table table-dark table-striped">
+  				<thead>
+    				<tr>
+     					<th scope="col">Date of Sale</th>
+      					<th scope="col">Customer</th>
+      					<th scope="col">Item</th>
+      					<th scope="col">Quantity</th>
+      					<th scope="col">Sale Price</th>
+      					<th scope="col">Total</th>
+      					<th scope="col">Status</th>
+      					<th scope="col"></th>
+    				</tr>
+  				</thead>
+  				<tbody>
+    				<tr th:each="sale : ${saleList}">
+      					<td th:text="${sale.dateOfSale}"></td>
+      					<td th:text="${sale.customer.firstName} + ' ' + ${sale.customer.lastName}"></td>
+      					<td th:text="${sale.item.name}"></td>
+      					<td th:text="${sale.quantity}"></td>
+      					<td th:text="${sale.salePrice}"></td>
+      					<td th:text="${sale.salePrice} * ${sale.quantity}"></td>
+      					<td th:text="${sale.paid} ? 'PAID' : 'UNPAID'"></td>
+      					<td>
+      						<button th:onclick="|window.location.href='/sales/edit/${sale.id}'|" th:field=${sale.id}>Edit</button>
+      						<button th:onclick="|window.location.href='/sales/delete/${sale.id}'|" th:field=${sale.id}>Delete</button>
+      					</td>
+    				</tr>
+  				</tbody>
+			</table>
+
+			<button th:onclick="|window.location.href='/sales/create'|">Create Sale Item</button>
 		</div>
 	</div>
+	
 </body>
 </html>
