--- a/sims/src/main/resources/static/css/style.css
+++ b/sims/src/main/resources/static/css/style.css
@@ -32,6 +32,7 @@ body {
 
 div.content {
 	margin-left: 200px;
+	margin-top: 54px;
 	padding: 1px 16px;
 	height: 1000px;
 }
@@ -58,6 +59,20 @@ div.content {
 }
 
 h2 {
+	font-weight: bold;	
+}
+
+/* Modify the background color */
+.navbar-custom {
+	background-color: black;
+	position: fixed;
+  	top: 0;
+  	width: 100%;
+  	z-index:1;
+}
+/* Modify brand and text color */
+.navbar-custom .navbar-brand, .navbar-custom .navbar-text {
+	color: white;
 	font-weight: bold;
-	
+	padding-left: 16px;
 }
