--- a/sims/src/main/resources/templates/customers.html
+++ b/sims/src/main/resources/templates/customers.html
@@ -3,15 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Customers</title>
+<title>Sales & Inventory Management</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <link rel="stylesheet" href="/css/style.css">
-<style>
-
-</style>
 </head>
 <body>
+
+	<nav class="navbar navbar-custom">
+        <a class="navbar-brand"><i class="bi-front"></i>  Sales & Inventory Management</a>
+    </nav>
+
 	<div class="sidebar">
 		<a th:href="@{/dashboard}"><i class="bi-speedometer2"></i> Dashboard</a> 
 		<a th:href="@{/inventory}"><i class="bi-box-seam"></i> Inventory</a> 
