--- a/sims/src/main/resources/templates/dashboard.html
+++ b/sims/src/main/resources/templates/dashboard.html
@@ -3,14 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Dashboard</title>
+<title>Sales & Inventory Management </title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 <link rel="stylesheet" href="/css/style.css">
-<style>
-
-</style>
 </head>
 <body>
+
+	<nav class="navbar navbar-custom">
+        <a class="navbar-brand"><i class="bi-front"></i>  Sales & Inventory Management</a>
+    </nav>
+
 	<div class="sidebar">
 		<a class="active"><i class="bi-speedometer2"></i> Dashboard</a> 
 		<a th:href="@{/inventory}"><i class="bi-box-seam"></i> Inventory</a> 
@@ -19,12 +22,56 @@
 	</div>
 
 	<div class="content">
-		<h2>DASHBOARD</h2>
-		<p>This example use media queries to transform the sidebar to a
-			top navigation bar when the screen size is 700px or less.</p>
-		<p>We have also added a media query for screens that are 400px or
-			less, which will vertically stack and center the navigation links.</p>
-		<h3>Resize the browser window to see the effect.</h3>
+		<div class="container my-3">
+			<h2>DASHBOARD</h2>
+			
+			<div class="row">
+        		<div class="col-sm-4">
+          			<div class="card text-dark bg-light mb-3">
+          				<div class="card-body">
+            				<h4 class="card-title">Revenue</h4>
+            				<p class="card-text">amount</p> 
+            			</div>
+          			</div>
+        		</div>
+        		<div class="col-sm-4">
+          			<div class="card text-dark bg-light mb-3">
+          				<div class="card-body">
+            				<h4 class="card-title">Profit</h4>
+            				<p class="card-text">amount</p> 
+            			</div>
+          			</div>
+        		</div>
+        		<div class="col-sm-4">
+          			<div class="card text-dark bg-light mb-3">
+          				<div class="card-body">
+            				<h4 class="card-title">Total Sales</h4>
+            				<p class="card-text">amount</p> 
+            			</div>
+          			</div>
+        		</div>
+      		</div>
+      		
+      		<div class="row">
+      			<div class="col-sm-6">
+          			<div class="card text-dark bg-light mb-3">
+          				<div class="card-body">
+            				<h4 class="card-title">Items - Low Stock</h4>
+            				<p class="card-text">items</p> 
+            			</div>
+          			</div>
+        		</div>
+        		<div class="col-sm-6">
+          			<div class="card text-dark bg-light mb-3">
+          				<div class="card-body">
+            				<h4 class="card-title">Top Selling Items</h4>
+            				<p class="card-text">items</p> 
+            			</div>
+          			</div>
+        		</div>
+      		</div>
+
+		</div>
 	</div> 
 	
 	
