--- a/sims/src/main/resources/templates/inventory.html
+++ b/sims/src/main/resources/templates/inventory.html
@@ -24,7 +24,11 @@
 	<div class="content">
 		<div class="container my-3">
 			<h2 class="page-heading">INVENTORY</h2>
-			<table class="table table-dark table-striped">
+			
+			<label for="searchBar"><b>Search:</b></label>
+			<input type="text" id="searchBar" onkeyup="search()" placeholder="Search for item name..." ><br><br>
+			
+			<table class="table table-dark table-striped" id="myTable">
   				<thead>
     				<tr>
       					<th scope="col">Item Name</th>
@@ -39,7 +43,7 @@
       					<td th:text="${item.name}"></td>
       					<td th:text="${item.description}"></td>
       					<td th:text="${item.inventory}"></td>
-      					<td th:text="${item.cost}"></td>
+      					<td th:text="'$' + ${item.cost}"></td>
       					<td>
       						<button th:onclick="|window.location.href='/inventory/edit/${item.id}'|" th:field=${item.id}>Edit</button>
       						<button th:onclick="|window.location.href='/inventory/delete/${item.id}'|" th:field=${item.id}>Delete</button>
@@ -51,6 +55,28 @@
 			<button th:onclick="|window.location.href='/inventory/create'|">Create New Item</button>
 		</div>
 	</div>
+	
+	<script>
+		function search() {
+  			var input, filter, table, tr, td, i, txtValue;
+  			input = document.getElementById("searchBar");
+  			filter = input.value.toUpperCase();
+  			table = document.getElementById("myTable");
+  			tr = table.getElementsByTagName("tr");
+  			for (i = 0; i < tr.length; i++) {
+    			td = tr[i].getElementsByTagName("td")[0];
+    			if (td) {
+      				txtValue = td.textContent || td.innerText;
+      				if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        				tr[i].style.display = "";
+      				} 
+      				else {
+        				tr[i].style.display = "none";
+      				}
+   				}       
+  			}
+		}
+	</script>
 	
 </body>
 </html>
