--- a/sims/src/main/resources/templates/sales.html
+++ b/sims/src/main/resources/templates/sales.html
@@ -24,7 +24,11 @@
 	<div class="content">
 		<div class="container my-3">
 			<h2>SALES</h2>
-			<table class="table table-dark table-striped">
+			
+			<label for="searchBar"><b>Search:</b></label>
+			<input type="text" id="searchBar" onkeyup="search()" placeholder="Search for item name..." ><br><br>
+			
+			<table class="table table-dark table-striped" id="myTable">
   				<thead>
     				<tr>
      					<th scope="col">Date of Sale</th>
@@ -43,8 +47,8 @@
       					<td th:text="${sale.customer.firstName} + ' ' + ${sale.customer.lastName}"></td>
       					<td th:text="${sale.item.name}"></td>
       					<td th:text="${sale.quantity}"></td>
-      					<td th:text="${sale.salePrice}"></td>
-      					<td th:text="${sale.salePrice} * ${sale.quantity}"></td>
+      					<td th:text="'$' + ${sale.salePrice}"></td>
+      					<td th:text="'$' + (${sale.salePrice} * ${sale.quantity})"></td>
       					<td th:text="${sale.paid} ? 'PAID' : 'UNPAID'"></td>
       					<td>
       						<button th:onclick="|window.location.href='/sales/edit/${sale.id}'|" th:field=${sale.id}>Edit</button>
@@ -57,6 +61,28 @@
 			<button th:onclick="|window.location.href='/sales/create'|">Create Sale Item</button>
 		</div>
 	</div>
+	
+	<script>
+		function search() {
+  			var input, filter, table, tr, td, i, txtValue;
+  			input = document.getElementById("searchBar");
+  			filter = input.value.toUpperCase();
+  			table = document.getElementById("myTable");
+  			tr = table.getElementsByTagName("tr");
+  			for (i = 0; i < tr.length; i++) {
+    			td = tr[i].getElementsByTagName("td")[2];
+    			if (td) {
+      				txtValue = td.textContent || td.innerText;
+      				if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        				tr[i].style.display = "";
+      				} 
+      				else {
+        				tr[i].style.display = "none";
+      				}
+   				}       
+  			}
+		}
+	</script>
 	
 </body>
 </html>
