changes to table styles

--- a/sims/src/main/resources/templates/dashboard.html
+++ b/sims/src/main/resources/templates/dashboard.html
@@ -58,7 +58,7 @@
           				<div class="card-body">
             				<h4 class="card-title">Inventory - Low Stock</h4>
             				<div  th:if="${!lowItemList.isEmpty()}">
-            					<table class="table">
+            					<table class="table table-bordered table-sm align-middle">
             						<tr>
             							<th>Item Name</th>
             							<th>Inventory Count</th>
@@ -81,7 +81,7 @@
           			<div class="card text-dark bg-light mb-3">
           				<div class="card-body">
             				<h4 class="card-title">Top Selling Items</h4>
-            				<table class="table">
+            				<table class="table table-bordered table-sm align-middle">
             					<tr>
             						<th></th>
             						<th>Item Name</th>
