--- a/sims/src/main/resources/templates/customers.html
+++ b/sims/src/main/resources/templates/customers.html
@@ -28,8 +28,8 @@
 			<label for="searchBar"><b>Search:</b></label>
 			<input type="text" id="searchBar" onkeyup="search()" placeholder="Search for customer first name..." ><br><br>
 			
-			<table class="table table-dark table-striped" id="myTable">
-  				<thead>
+			<table class="table table-bordered table-sm align-middle" id="myTable">
+  				<thead class="table-dark">
     				<tr>
       					<th scope="col">First Name</th>
       					<th scope="col">Last Name</th>
