--- a/sims/src/main/resources/static/css/style.css
+++ b/sims/src/main/resources/static/css/style.css
@@ -34,7 +34,6 @@ div.content {
 	margin-left: 200px;
 	margin-top: 54px;
 	padding: 1px 16px;
-	height: 1000px;
 }
 
 @media screen and (max-width: 700px) {
@@ -79,4 +78,8 @@ h2 {
 
 #searchBar {
 	width: 100%;
+}
+
+.error-message {
+	color: red;
 }
