--- a/sims/src/main/resources/templates/editCustomerForm.html
+++ b/sims/src/main/resources/templates/editCustomerForm.html
@@ -31,14 +31,17 @@
         		<div class="col-md-6 form-group">
 					<label>First Name</label>
         			<input type="text" class="form-control" th:field="*{firstName}">
+        			<p class="error-message" th:each="error : ${#fields.errors('firstName')}" th:text="${error}">Validation error</p>
         		</div>
         		<div class="col-md-6 form-group">
 					<label>Last Name</label>
         			<input type="text" class="form-control" th:field="*{lastName}">
+        			<p class="error-message" th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Validation error</p>
         		</div>
         		<div class="col-md-6 form-group">
 					<label>Email</label>
         			<input type="text" class="form-control" th:field="*{email}">
+        			<p class="error-message" th:each="error : ${#fields.errors('email')}" th:text="${error}">Validation error</p>
         		</div>
 				<button type="submit" class="btn btn-primary btn-block mt-3">Update Customer Info</button>
         	</form>
