--- a/sims/src/main/resources/templates/newCustomerForm.html
+++ b/sims/src/main/resources/templates/newCustomerForm.html
@@ -28,14 +28,17 @@
             	<div class="col-md-6 form-group">
                 	<label>First Name</label>
             		<input type="text" class="form-control" th:field="*{firstName}">
+            		<p class="error-message" th:each="error : ${#fields.errors('firstName')}" th:text="${error}">Validation error</p>
                 </div>
                 <div class="col-md-6 form-group">
                     <label>Last Name</label>
                     <input type="text" class="form-control" th:field="*{lastName}">
+					<p class="error-message" th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Validation error</p>
                	</div>
             	<div class="col-md-6 form-group">
                 	<label>Email</label>
                		<input type="email" class="form-control" th:field="*{email}">
+               		<p class="error-message" th:each="error : ${#fields.errors('email')}" th:text="${error}">Validation error</p>
                 </div>	
                 <button type="submit" class="btn btn-primary btn-block mt-3">Create Customer</button>
             </form>
