--- a/sims/src/main/resources/templates/customers.html
+++ b/sims/src/main/resources/templates/customers.html
@@ -11,7 +11,7 @@
 <body>
 
 	<nav class="navbar navbar-custom">
-        <a class="navbar-brand"><i class="bi-front"></i>  Sales & Inventory Management</a>
+        <a class="navbar-brand" th:href="@{/}"><i class="bi-front"></i>  Sales & Inventory Management</a>
     </nav>
 
 	<div class="sidebar">
@@ -19,6 +19,7 @@
 		<a th:href="@{/inventory}"><i class="bi-box-seam"></i> Inventory</a> 
 		<a th:href="@{/sales}"><i class="bi-bar-chart-line"></i> Sales</a>
 		<a class="active"><i class="bi-people-fill"></i> Customers</a>
+		<a class="logout" sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a>
 	</div>
 
 	<div class="content">
