--- a/sims/src/main/resources/templates/dashboard.html
+++ b/sims/src/main/resources/templates/dashboard.html
@@ -47,7 +47,7 @@
           			<div class="card border-success mb-3">
           				<div class="card-body">
             				<h4 class="card-title">Total Sales</h4>
-            				<p class="card-text" th:text="${salesCount}"></p> 
+            				<p class="card-text" th:text="'Items Sold: ' + ${salesCount}"></p> 
             			</div>
           			</div>
         		</div>
@@ -100,10 +100,67 @@
           			</div>
         		</div>
       		</div>
-
+		</div>
+		
+		<div id="barGraph">
 		</div>
 	</div> 
 	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://code.highcharts.com/highcharts.js"></script>
+	<script src="https://code.highcharts.com/modules/data.js"></script>
+	<script src="https://code.highcharts.com/modules/exporting.js"></script>
+	<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+	<script th:inline="javascript">
+	$(function(){
+	    Highcharts.chart('barGraph', {
+	        chart: {
+	            type: 'column'
+	        },
+	        title: {
+	            text: 'Total Sales/Profit/Revenue By Month'
+	        },
+	        subtitle: {
+	            text: 'Year 2023'
+	        },
+	        xAxis: {
+	            categories: /*[[${salesMap.keySet()}]]*/[],
+	            crosshair: true
+	        },
+	        yAxis: {
+	            min: 0,
+	            max: 1200,
+	            title: {
+	                text: 'Total Sales/Profit/Revenue'
+	            }
+	        },
+	        tooltip: {
+	            headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+	            pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+	            '<td style="padding:0"><b>{point.y}</b></td></tr>',
+	            footerFormat: '</table>',
+	            shared: true,
+	            useHTML: true
+	        },
+	        plotOptions: {
+	            column: {
+	                pointPadding: 0.2,
+	                borderWidth: 0
+	            }
+	        },
+	        series: [{
+	            name: 'Sales',
+	            data: /*[[${salesMap.values()}]]*/[]
+	        }, {
+	        	name: 'Profit',
+	        	data: /*[[${profitMap.values()}]]*/[]
+	        }, {
+	        	name: 'Revenue',
+	        	data: /*[[${revenueMap.values()}]]*/[]
+	        }]
+	    });
+	    });
+	</script>
 	
 </body>
 </html>
