--- a/sims/src/main/resources/templates/editSaleForm.html
+++ b/sims/src/main/resources/templates/editSaleForm.html
@@ -67,7 +67,8 @@
                         <label class="form-check-label" for="option2">Unpaid</label>
                    	</div>
                 </div>
-               	<button type="submit" class="btn btn-primary btn-block mt-3">Update Sale</button>
+                <br>
+               	<button type="submit" class="btn btn-outline-dark btn-sm">Update Sale Info</button>
            	</form>
 		</div>
 	</div>
