--- a/sims/src/main/resources/templates/newSaleForm.html
+++ b/sims/src/main/resources/templates/newSaleForm.html
@@ -64,7 +64,8 @@
                          <label class="form-check-label" for="option2">Unpaid</label>
                      </div>
                 </div>
-               	<button type="submit" class="btn btn-primary btn-block mt-3">Create Sale</button>
+                <br>
+               	<button type="submit" class="btn btn-outline-dark btn-sm">Create Sale</button>
         	</form>
 		</div>
 	</div>
