--- a/sims/src/main/resources/templates/editItemForm.html
+++ b/sims/src/main/resources/templates/editItemForm.html
@@ -49,7 +49,8 @@
 					<input type="number" step="any" class="form-control" th:field="*{inventory}">
 					<p class="error-message" th:each="error : ${#fields.errors('inventory')}" th:text="${error}">Validation error</p>
 				</div>
-				<button type="submit" class="btn btn-primary btn-block mt-3">Update Item</button>
+				<br>
+				<button type="submit" class="btn btn-outline-dark btn-sm">Update Item Info</button>
 			</form>
 		</div>
 	</div>
