--- a/sims/src/main/resources/templates/newItemForm.html
+++ b/sims/src/main/resources/templates/newItemForm.html
@@ -46,7 +46,8 @@
                     <input type="number" step="any" class="form-control" th:field="*{inventory}">
                     <p class="error-message" th:each="error : ${#fields.errors('inventory')}" th:text="${error}">Validation error</p>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block mt-3">Create Item</button>
+                <br>
+                <button type="submit" class="btn btn-outline-dark btn-sm">Create Item</button>
            	</form>
 		</div>
 	</div>
